# nexus_coding_test

./: .gitignore  README.md  my_code.py  pyproject.toml
outputs/: output.txt
